# gp_cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  vcpkg.json
.github/actions/build-genpattern-linux/: action.yml
.github/actions/build-genpattern-windows/: action.yml
.github/workflows/: build.yml  build_linux.yml  build_linux_arm64.yml  build_linux_x86_64.yml  build_windows.yml  release.yml
docker/: build_static.sh
gp_cpp/: CMakeLists.txt
gp_cpp/include/: AnnealingSimulation.hpp  AnnealingSimulator.hpp  BitImage.hpp  Canvas.hpp  CoolingSchedules.hpp  ImgAlpha.hpp  ImgAlphaFilledContour.hpp  OffsettedBitImage.hpp  OffsettedImgAlpha.hpp  OptimizePlacement.hpp  PatternGenerator.hpp  genpattern.h  misc.hpp
gp_cpp/src/: AnnealingSimulation.cpp  BitImage.cpp  Canvas.cpp  CoolingSchedules.cpp  ImgAlpha.cpp  ImgAlphaFilledContour.cpp  OffsettedBitImage.cpp  OffsettedImgAlpha.cpp  OptimizePlacement.cpp  PatternGenerator.cpp  genpattern.cpp  misc.cpp
gp_cpp/tests/: test.cpp  test_lib.cpp
gp_cpp/wasm/: test.html  worker.js
python/: genpattern.h  genpattern.py  genpattern_lib.py  requirements.txt  test.py
